objects/PriceIncreaseDetails__c.object
<CustomObject>
    <description>SFDC1-9299: Create a Related Price Increase Details Related Object. Fields from the price increase section will need to be created in this related object - please create them as is from the contract - same name/type/picklist values.</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>SFDC1-5807 : This field will hold the value of Comments
SFDC1-9299</description>
        <inlineHelpText>Enter Comments related to Price Increase</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <description>SFDC1-9299: Move Price Increase Details into a custom object</description>
        <inlineHelpText>Contract</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Price Increase Details</relationshipLabel>
        <relationshipName>PriceIncreaseDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DateLetterSent__c</fullName>
        <description>SFDC1-5807 : This field will hold the value of Date Letter Sent
SFDC1-9299</description>
        <inlineHelpText>Enter Date when Letter Sent</inlineHelpText>
        <label>Date Letter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExemptionFromIncreaseIfApplicable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-5807 : This field will hold the value of Exemption From Increase If Applicable
SFDC1-9299</description>
        <inlineHelpText>This will be Exempted From Increase If Applicable</inlineHelpText>
        <label>Exemption From Increase If Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExistingAnnualRevenue__c</fullName>
        <description>SFDC1-9299: Price Increase Details object</description>
        <inlineHelpText>Existing Annual Revenue</inlineHelpText>
        <label>Existing Annual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Increase__c</fullName>
        <description>SFDC1-5807 : This field will hold the value of % Increase
SFDC1-9299</description>
        <inlineHelpText>Enter % Increase</inlineHelpText>
        <label>% Increase</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>SFDC 1365 - Create a Legacy fields for Content Version</description>
        <externalId>true</externalId>
        <inlineHelpText>Source System Name and Record ID</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>SFDC 1357 - Create a LegacyId field for Price Increase Details object</description>
        <externalId>true</externalId>
        <inlineHelpText>Record IDs from the legacy system</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>SFDC 1365 - Create a Legacy fields for Content Version</description>
        <inlineHelpText>Name of CRM system that this record has come from</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NetIncrease__c</fullName>
        <description>SFDC1-5807 : This field will hold the value of Net Increase
SFDC1-9299</description>
        <inlineHelpText>Enter Net Increase</inlineHelpText>
        <label>Net Increase</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NewAnnualRevenue__c</fullName>
        <description>SFDC1-9299: Price Increase Details custom object</description>
        <inlineHelpText>New Annual Revenue</inlineHelpText>
        <label>New Annual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriceIncreaseApplied__c</fullName>
        <description>SFDC1-5807 : This field will hold the value of Price Increase Applied
SFDC1-9300 : Price Increase Details section field creation/updates
SFDC1-9299</description>
        <inlineHelpText>Whether Price Increase Applied</inlineHelpText>
        <label>Price Increase Applied</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PriceIncreaseEffectiveDate__c</fullName>
        <description>SFDC1-5807 : This field will hold the value of Price Increase Effective Date. SFDC1-9299</description>
        <inlineHelpText>Enter Price Increase Effective Date</inlineHelpText>
        <label>Price Increase Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PriceIncreaseLetterReturnedResent__c</fullName>
        <description>SFDC1-5807 : This field will hold the value of Date Price Increase Letter Returned And Resent. SFDC1-9299</description>
        <inlineHelpText>Enter Date Price Increase Letter Returned And Resent</inlineHelpText>
        <label>Price Increase Letter Returned &amp; Resent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PriceIncreaseLockedInDate__c</fullName>
        <description>SFDC1-5807 : This field will hold the value of Price Increase Locked In Date
SFDC1-9299</description>
        <inlineHelpText>Enter Price Increase Locked In Date</inlineHelpText>
        <label>Price Increase Locked In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PriceIncreaseNotAutomatic__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-9300:Price Increase Details section field creation SFDC1-9299</description>
        <inlineHelpText>Price Increase Not Automatic</inlineHelpText>
        <label>Price Increase (not automatic)</label>
        <type>Checkbox</type>
    </fields>
    <label>Price Increase Details</label>
    <nameField>
        <displayFormat>PID-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Increase Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PriceIncreaseAppliedValidation</fullName>
        <active>true</active>
        <description>SFDC1-9299:If &apos;Price Increase Applied&apos; = &apos;No&apos;, then &apos;Comments&apos; field is required</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.PriceIncreaseDetails__c, $Setup.SystemMutedValidationRules__c.All__c ), False,
AND(
NOT(ISBLANK(TEXT(PriceIncreaseApplied__c))),
ISPICKVAL(PriceIncreaseApplied__c , &apos;No&apos;),
ISBLANK(Comments__c)
)
)</errorConditionFormula>
        <errorDisplayField>Comments__c</errorDisplayField>
        <errorMessage>If &apos;Price Increase Applied&apos; = &apos;No&apos;, then &apos;Comments&apos; field is required.</errorMessage>
    </validationRules>
</CustomObject>